--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,23 @@
-##############################
-## Java
-##############################
-.mtj.tmp/
+# Compiled class file
 *.class
+
+# Log file
+*.log
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
 *.jar
 *.war
-*.ear
 *.nar
-hs_err_pid*
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-##############################
-## NetBeans
-##############################
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-nb-configuration.xml
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
